# beacon

./: .gitignore  Cargo.toml  beacon.design.toml  beacon.toml  config.toml  decompile.sh
.cargo-husky/hooks/: pre-commit
assets/: beacon.default.toml  default-config.toml
beacon/: Cargo.toml
beacon-codec/: Cargo.toml
beacon-codec/src/: decode.rs  encode.rs  lib.rs  state.rs
beacon-codec/src/types/: json.rs  number.rs  string.rs  varint.rs
beacon-config/: Cargo.toml
beacon-config/old/: lib.rs
beacon-config/src/: config.rs  def.rs  lib.rs  read.rs  reload.rs
beacon-core/: Cargo.toml
beacon-core/src/: legacy.rs  lib.rs
beacon-data/: Cargo.toml
beacon-data/src/: lib.rs
beacon-java/: Cargo.toml
beacon-java/src/: conn.rs  lib.rs
beacon-macros/: Cargo.toml
beacon-macros/src/: lib.rs
beacon-net/: Cargo.toml
beacon-net/src/: conn.rs  lib.rs  packet.rs  player.rs
beacon-net/src/client/: status.rs
beacon-net/src/server/: handshake.rs  login.rs  mod.rs  status.rs
beacon-query/: Cargo.toml
beacon-query/old/: res.rs
beacon-query/src/: handler.rs  kv.rs  lib.rs  process.rs  req.rs  res.rs  sock.rs  stats.rs  string.rs  tests.rs
beacon-tui/: Cargo.toml  build.rs
beacon-tui/src/: draw.rs  event.rs  format.rs  home.rs  lib.rs
beacon-util/: Cargo.toml
beacon-util/src/: lib.rs
beacon/src/: error.rs  lib.rs  main.rs  old.rs  server.rs
beacon/src/server/: config.rs  mod.rs
docs/: beacon.design.toml
src/lib/config/: Cargo.toml
src/lib/config/src/: lib.rs  server.rs  watcher.rs
src/lib/net/: Cargo.toml
src/lib/net/crates/java/: Cargo.toml
src/lib/net/crates/java/src/: conn.rs  lib.rs
src/lib/net/crates/msmp/: Cargo.toml  readme.md
src/lib/net/crates/msmp/src/: conn.rs  lib.rs  method.rs  rpc.rs  schema.rs
src/lib/net/crates/msmp/src/method/: allowlist.rs  bans.rs  gamerules.rs  ip_bans.rs  openrpc.rs  operators.rs  players.rs  server.rs  serversettings.rs
src/lib/net/crates/msmp/src/rpc/: allowlist.rs  bans.rs  gamerules.rs  ip_bans.rs  openrpc.rs  operators.rs  players.rs  server.rs  serversettings.rs
src/lib/net/crates/query/: Cargo.toml
src/lib/net/crates/query/src/: lib.rs  packet.rs  stat.rs  stats.rs  tests.rs
src/lib/net/crates/query/src/packet/: kv.rs  map.rs  req.rs  res.rs  string.rs
src/lib/net/crates/rcon/: Cargo.toml
src/lib/net/crates/rcon/src/: conn.rs  lib.rs
src/lib/net/query/: Cargo.toml
src/lib/net/query/src/: lib.rs
src/lib/net/src/: conn.rs  lib.rs  listener.rs
