[workspace]
members = ["beacon", "beacon-codec", "beacon-core", "beacon-data", "beacon-net"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
beacon-codec = { version = "0.0.0", path = "beacon-codec" }
beacon-core = { path = "beacon-core" }
beacon-data = { path = "beacon-data" }
beacon-net = { version = "0.0.0", path = "beacon-net" }
bytes = "1.11.1"
cargo-husky = { version = "1.5.0", default-features = false }
derive_more = "2.1.1"
miette = "7.6.0"
thiserror = "2.0.18"
tokio = "1.49.0"
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[workspace.lints.rust]
missing_docs = "warn"
