[workspace]
members = [
    "beacon",
    "beacon-codec",
    "beacon-config",
    "beacon-core",
    "beacon-data",
    "beacon-net",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
beacon-codec = { path = "beacon-codec" }
beacon-config = { version = "0.0.0", path = "beacon-config" }
beacon-core = { path = "beacon-core" }
beacon-data = { path = "beacon-data" }
beacon-net = { path = "beacon-net" }
bevy_ecs = "0.18.0"
bytes = "1.11.1"
cargo-husky = { version = "1.5.0", default-features = false }
derive_more = "2.1.1"
figment = "0.10.19"
miette = "7.6.0"
serde = "1.0.228"
thiserror = "2.0.18"
tokio = "1.49.0"
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[workspace.lints.rust]
missing_docs = "warn"
