[package]
name = "beacon-config"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_ecs.workspace = true
figment = { workspace = true, features = ["toml"] }
flume.workspace = true
miette.workspace = true
notify.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[lints]
workspace = true
