[package]
name = "beacon-config"
version.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
bevy_ecs.workspace = true
figment = { workspace = true, features = ["toml"] }
flume.workspace = true
image = { workspace = true, features = ["png", "jpeg", "webp", "rayon"] }
miette.workspace = true
notify.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[lints]
workspace = true
