[package]
name = "beacon-core"
version.workspace = true
edition.workspace = true

[dependencies]
beacon-codec.workspace = true
beacon-net.workspace = true
miette.workspace = true
tokio = { workspace = true, features = ["net", "signal"] }
tokio-util.workspace = true
tracing.workspace = true

[lints]
workspace = true
