[package]
name = "beacon-core"
version.workspace = true
edition.workspace = true

[features]
debug = ["bevy_ecs/debug"]

[dependencies]
beacon-codec.workspace = true
beacon-config.workspace = true
beacon-net.workspace = true
bevy_ecs.workspace = true
flume.workspace = true
miette.workspace = true
tokio = { workspace = true, features = ["net", "signal", "time"] }
tokio-util.workspace = true
tracing.workspace = true

[lints]
workspace = true
