[package]
name = "beacon-macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
darling.workspace = true
proc-macro-error2.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
syn.workspace = true

[lints]
workspace = true
