[package]
name = "beacon-net"
version.workspace = true
edition.workspace = true

[dependencies]
beacon-codec.workspace = true
beacon-macros.workspace = true
bevy_ecs.workspace = true
bytes.workspace = true
crossbeam-channel.workspace = true
derive_more = { workspace = true, features = ["deref"] }
futures.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tracing.workspace = true

[lints]
workspace = true
