[package]
name = "beacon-query"
version.workspace = true
edition.workspace = true

[dependencies]
beacon-data.workspace = true
deku.workspace = true
indexmap.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["net"] }
tracing.workspace = true

[dev-dependencies]
serial_test.workspace = true
