[package]
name = "beacon-query"
version.workspace = true
edition.workspace = true

[dependencies]
beacon-config.workspace = true
beacon-data.workspace = true
beacon-util.workspace = true
deku.workspace = true
indexmap.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["net", "sync"] }
tracing.workspace = true

[dev-dependencies]
serial_test.workspace = true
