[package]
name = "beacon"
version.workspace = true
edition.workspace = true

[dependencies]
beacon-core.workspace = true
miette.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
cargo-husky = { workspace = true, features = ["user-hooks"] }

[lints]
workspace = true
