[package]
name = "beacon"
version.workspace = true
edition.workspace = true

[features]
debug = ["beacon-core/debug"]

[dependencies]
beacon-config.workspace = true
beacon-core.workspace = true
beacon-data.workspace = true
miette = { workspace = true, features = ["fancy"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "chrono"] }

[dev-dependencies]
cargo-husky = { workspace = true, features = ["user-hooks"] }

[lints]
workspace = true
