[package]
name = "beacon-config"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_ecs.workspace = true
crossbeam-channel.workspace = true
notify = { workspace = true, features = ["crossbeam-channel"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
