[package]
name = "beacon-msmp"
version.workspace = true
edition.workspace = true

[dependencies]
beacon-config.workspace = true
beacon-net.workspace = true
bevy_ecs.workspace = true
inventory.workspace = true
jsonrpc-core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tungstenite.workspace = true
